--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
     "private": true,
     "version": "0.0.0",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "modern-normalize": "^1.1.0",
-      "react": "^17.0.2",
-      "react-dom": "^17.0.2"
+        "modern-normalize": "^1.1.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
-      "@vitejs/plugin-react": "^1.0.7",
-      "vite": "^2.8.0"
+        "@vitejs/plugin-react": "^1.0.7",
+        "eslint": "^8.10.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.29.3",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "vite": "^2.8.0"
     }
-  }
-  
+}
