--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "modern-normalize": "^1.1.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "use-local-storage-state": "^16.0.1"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^1.0.7",
